...
    
    private var textColourSection: some View {
        VStack(alignment: .leading, spacing: 8) {
            Text("textStyleEditor.textColour")
                .font(.headline)

                ColorPicker("textStyleEditor.textColour", selection: Binding(
                    get: {
                        if let uiColor = style.textColor {
                            return Color(uiColor: uiColor)
                        }
                        return Color.primary
                    },
...
